# sd-uber-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/uber/: config.py  database.py  main.py  redis_client.py
src/uber/models/: __init__.py  driver.py  rider.py  trip.py
src/uber/routers/: drivers.py  health.py  riders.py  rides.py
src/uber/schemas/: driver.py  health.py  ride.py  rider.py  trip.py
src/uber/services/: driver_service.py  matching_service.py  ride_service.py  trip_service.py
tests/: conftest.py
tests/functional/: test_ride_api.py
tests/unit/: test_health.py  test_ride_service.py  test_trip_service.py
verify/: __init__.py  manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_request_ride.py  test_fr2_match_driver.py  test_fr3_driver_location.py  test_fr4_trip_lifecycle.py  test_fr5_trip_status.py
