[project]
name = "uber"
version = "0.1.0"
description = "Uber MVP backend — ride matching with Redis GEO + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "redis>=5.0,<6.0",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends()/Query() in defaults — standard pattern

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "UP", "F841"]
"verify/**" = ["B", "E501"]

[tool.setuptools.packages.find]
where = ["src"]
